// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries reducer should init correctly 1`] = `
Object {
  "a": Object {
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "includes": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loading",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastFetch": null,
    "lastUpdate": null,
  },
}
`;

exports[`queries reducer updates should update correctly 1`] = `
Object {
  "a": Object {
    "count": 2,
    "data": Array [
      "12345",
      "67890",
    ],
    "definition": QueryDefinition {
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "includes": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
  },
}
`;

exports[`queries reducer updates should update correctly two queries 1`] = `
Object {
  "a": Object {
    "count": 2,
    "data": Array [
      "12345",
      "67890",
    ],
    "definition": QueryDefinition {
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "includes": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
  },
  "b": Object {
    "count": 0,
    "data": Array [
      "12345",
      "67890",
    ],
    "definition": QueryDefinition {
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "includes": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loading",
    "hasMore": false,
    "id": "b",
    "lastError": null,
    "lastFetch": null,
    "lastUpdate": 1337,
  },
}
`;
